2000-10-26  Pavel Roskin  <proski@gnu.org>

	* autoconf.sh: Don't show obsolete options on "--help". Report
	obsolete options to stderr. Adjust list of options. Correct
	processing of options. Process options with values separated by
	"=" first, so that abbreviations work. Don't accept "=" with
	short options.
	* autoheader.sh: Likewise.
	* autoreconf.sh: Likewise.
	* autoupdate.sh: Likewise.
	* ifnames.sh: There is no "--verbose" option.
	* doc/autoconf.texi: Option "-A" requires an argument.
	(autoreconf Invocation): Document "--install", "--symlink",
	"--m4dir" and the options passed to Automake.

2000-10-26  Akim Demaille  <akim@epita.fr>

	* shell.m4: Rename as...
	* m4sh.m4: this.
	* tests/m4sugar.m4, tests/shell.m4, tests/torture.m4: Rename as...
	* tests/m4sugar.at, tests/m4sh.at, tests/torture.at: these.
	* tests/semantics.m4, tests/base.m4, tests/suite.m4: Rename as...
	* tests/semantics.at, tests/base.at, tests/suite.at: these.
	* tests/tools.m4, tests/update.m4, tests/syntax.m4: Rename as...
	* tests/tools.at, tests/update.at, tests/syntax.at: these.
	* tests/mktests.sh: Adjust the output file names.

2000-10-25  Pavel Roskin  <proski@gnu.org>

	* autoupdate.sh: Redirect stdin for sed to /dev/null to avoid
	hangs with non-GNU versions of sed.

2000-10-25  Akim Demaille  <akim@epita.fr>

	Move the Autoconf independent shell macros into the file
	`shell.m4' and the name space `AS_*'.

	* acgeneral.m4 (AC_SHELL_IFELSE, _AC_SHELL_TMPDIR, AC_SHELL_UNSET)
	(AC_SHELL_MKDIR_P, AC_SHELL_DIRNAME): Rename and move to...
	* shell.m4 (AS_IFELSE, AS_TMPDIR, AS_UNSET, AS_MKDIR_P)
	(AS_DIRNAME): here, a new file.
	Adjust all dependencies.

	* tests/base.m4 (m4_wrap): Eve out into...
	* tests/shell.m4: here, new file.
	* tests/base.m4 (AC_SHELL_MKDIR_P)
	(AC_SHELL_DIRNAME & AC_SHELL_DIRNAME_SED): Eve out into...
	* tests/m4sugar.m4 (AS_MKDIR_P, AS_DIRNAME & AS_DIRNAME_SED):
	here, new file.
	Adjust the test suite.

2000-10-25  Akim Demaille  <akim@epita.fr>
