@@ -115,7 +115,7 @@ while test $# -gt 0 ; do
        verbose=echo
        shift;;
 
-    --localdir=* | --l*=* )
+    --localdir=* | --l*=* | -l?* )
        localdir=$optarg
        shift ;;
     --localdir | --l* | -l )
@@ -124,7 +124,7 @@ while test $# -gt 0 ; do
        localdir=$1
        shift ;;
 
-    --autoconf-dir=* | --a*=* )
+    --autoconf-dir=* | --a*=* | -A?* )
       autoconf_dir=$optarg
        shift ;;
     --autoconf-dir | --a* | -A )
@@ -132,7 +132,7 @@ while test $# -gt 0 ; do
        shift
        autoconf_dir=$1
        shift ;;
-    --macrodir=* | --m*=* )
+    --macrodir=* | --m*=* | -m?* )
        echo "$me: warning: --macrodir is obsolete, use --autoconf-dir" >&2
        autoconf_dir=$optarg
        shift ;;
@@ -143,7 +143,7 @@ while test $# -gt 0 ; do
        autoconf_dir=$1
        shift ;;
 
-    --warnings=* | --w*=* )
+    --warnings=* | --w*=* | -W?* )
        warnings=$warnings,$optarg
        shift ;;
     --warnings | --w* | -W )
